--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "react": "^17.0.2",
     "socket.io": "^4.0.1",
     "uuid": "^8.3.2"
   }
