--- a/package.json
+++ b/package.json
@@ -5,17 +5,29 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "react-dev": "webpack --watch",
+    "build": "webpack --mode production",
+    "start": "node index.js"
   },
   "author": "Hipólito Gomez Cuello",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.7"
-  },
   "dependencies": {
     "express": "^4.17.1",
+    "hookrouter": "^1.2.5",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "socket.io": "^4.0.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "webpack-cli": "^4.7.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "@babel/preset-react": "^7.13.13",
+    "babel-loader": "^8.2.2",
+    "nodemon": "^2.0.7",
+    "nodemon-webpack-plugin": "^4.5.2",
+    "webpack": "^5.37.1"
   }
 }
